# LPAvaliacao2

./: CMakeLists.txt  delimitadores.cpp  delimitadores.h  dicionario.cpp  dicionario.h  fila_circular.cpp  fila_circular.h  lista.cpp  lista.h  main.cpp
